HelloUltraviolet/Fixtures/RejectedSource/Keys/WaitWhileKeyHeldLowering/Source/Main.uv
//! Rejected async-key specimen for wait while a shared key is held.

public procedure waitWhileKeyHeldLoweringReference() -> i32 {
    var shared_value: shared i32 = 1
    %read shared_value {
        let observed_value: i32 = wait shared_value
    }
    return 0
}
